<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We will help you to find your way!</string>
    <string name="powered_by">Powered By Moideen Faizal</string>


    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make a Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back and Enjoy</string>


    <string name="first_slide_desc">You can search any palce nearby or with-in the specified city.</string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you dont have to worry</string>


    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Let Get Started</string>


    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>


    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search..</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="all_categories">Categories</string>
    <string name="add_missing_place">Missing Place</string>

    <string name="education">Education</string>

    <string name="share">Share</string>
    <string name="rateus">Rate us</string>

    <string name="car_rent">Car Rent</string>

    <string name="expand_all">Expand All</string>

    <string name="hospitals">Hospitals</string>


    <string name="sign_up">Signup</string>
    <string name="retailer_heading">Grown your bussiness</string>
    <string name="retailer_tag_line">We will help you to grow your bussiness using online services</string>
    <string name="create_account">Create Account</string>
    <string name="how_we_work">How We Work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_detail">Provide your account email for which you want to reset your password</string>

    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>

    <string name="enter_full_name">Full Name</string>

    <string name="enter_email">Email</string>

    <string name="enter_phone_number">Phone Number</string>


    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>


    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verication_text">Verification</string>
    <string name="otp_description_text">Enter one time password sent on\n+8610561248</string>


    <string name="make_selection">Make Selection</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset your password?</string>
    <string name="via_sms">via sms</string>
    <string name="via_mail">via mail</string>

    <string name="new_credentials">New Credentials</string>
    <string name="new_credentials_detail">Your Identity has been verified! set your new password</string>

    <string name="password_updated">Password Updated</string>

    <string name="password_updated_success_message">Your Password has been updated</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>