<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context=".Common.LoginSignup.ForgotPasswordSuccessMessage">



    <ImageView
        android:layout_width="71dp"
        android:layout_height="35dp"
        android:src="@drawable/general_back_icon"
        android:padding="5dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:fontFamily="@font/multi_black"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="-80dp"
            android:textAllCaps="true" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/password_updated_icon"
            android:layout_marginTop="20dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated_success_message"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/multi"
            android:textAlignment="center"
            android:gravity="center"/>


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</LinearLayout>