<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.ForgetPassword"
    android:background="@color/white"
    android:padding="30dp">
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="71dp"
            android:layout_height="35dp"
            android:src="@drawable/general_back_icon"
            android:padding="5dp"
            />

        <ImageView
            android:id="@+id/forgot_password_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/forgot_password_icon"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            />

        <TextView
            android:id="@+id/forgot_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/multi_black"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            />


        <TextView
            android:id="@+id/forgot_password_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_detail"
            android:textSize="18sp"
            android:fontFamily="@font/multi"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            />


        <com.hbb20.CountryCodePicker
            android:id="@+id/country_code_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_border"
            android:padding="7dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFlag="true"
            app:ccp_showFullName="true"
            app:ccp_showNameCode="true" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forget_password_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxBackgroundColor="@color/lightWhite"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            android:hint="@string/enter_phone_number"
            app:startIconDrawable="@drawable/field_phone_icon"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            android:textColorHint="@color/black">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:textColor="@color/black"
                android:inputType="phone"
                />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:background="@color/colorPrimary"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:onClick="callForgetPasswordScreen"
            android:layout_gravity="center"
            />

        <RelativeLayout
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_centerInParent="true"
            android:background="@drawable/white_circle"
            android:elevation="8dp"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"/>


        </RelativeLayout>


    </LinearLayout>


</ScrollView>