<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.ForgetPassword"
    android:background="@color/white"
    android:padding="30dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="71dp"
            android:layout_height="35dp"
            android:src="@drawable/general_back_icon"
            android:padding="5dp"
            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/multi_black"
            android:layout_marginTop="10dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection_detail"
            android:textSize="18sp"
            android:fontFamily="@font/multi"
            />




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/lightWhite"
            android:padding="10dp">



            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/mobile_custom_icon"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                />



            <TextView
                android:id="@+id/mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_sms"
                android:textSize="25sp"
                android:fontFamily="@font/multi"
                android:layout_toRightOf="@id/mobile_icon"
                android:layout_marginTop="35dp"
                />


            <TextView
                android:id="@+id/mobile_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+8610561248"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:fontFamily="@font/multi"
                android:layout_toRightOf="@id/mobile_icon"
                android:layout_below="@id/mobile_title"
                />


             <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/transparent"/>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:background="@color/lightWhite"
            android:padding="10dp">



            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/email_custom_icon"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                />



            <TextView
                android:id="@+id/mail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_mail"
                android:textSize="25sp"
                android:fontFamily="@font/multi"
                android:layout_toRightOf="@id/email_icon"
                android:layout_marginTop="35dp"
                />


            <TextView
                android:id="@+id/mail_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="test@gmail.com"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:fontFamily="@font/multi"
                android:layout_toRightOf="@id/email_icon"
                android:layout_below="@id/mail_title"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"/>

        </RelativeLayout>


    </LinearLayout>


</ScrollView>